# cozy-acres-gl

./: .gitignore  CMakeLists.txt  README.md  Texture.cpp  Texture.h  Window.h  embed_texture.cmake  main.cpp
.github/workflows/: deploy-visualizer  deploy-visualizer.yml  release.yml
assets/shaders/: basic.frag  basic.vert  debug.frag  debug.vert  instanced.frag  instanced.vert
cmake/: embed_shaders.cmake  embed_textures.cmake
misc/: townvisualizer.html
src/app/: Engine.cpp  Engine.h
src/core/camera/: CameraConfig.h  FreeCamera.cpp  FreeCamera.h  ICamera.h
src/core/graphics/: IGpuResource.h
src/core/input/: IInputSystem.h  InputConfig.h  InputSystem.cpp  InputSystem.h
src/core/time/: ITime.h  TimeSystem.cpp  TimeSystem.h
src/core/util/: FileSystem.cpp  FileSystem.h
src/platform/: GlfwWindow.cpp  GlfwWindow.h  IWindow.h
src/rendering/: IRenderer.h  InstanceData.h  Light.h  LightManager.cpp  LightManager.h
src/rendering/debug/: DebugGizmoRenderer.cpp  DebugGizmoRenderer.h  DebugMesh.cpp  DebugMesh.h  DebugPrimitives.cpp  DebugPrimitives.h
src/rendering/opengl/: OpenGLInstancedMesh.cpp  OpenGLInstancedMesh.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  PrimitiveData.h
src/world/: Town.cpp  Town.h
src/world/data/: Acre.h  Tile.h  TownConfig.h
src/world/generation/: GenerationPipeline.cpp  GenerationPipeline.h
src/world/generation/steps/: CliffGenerationStep.cpp  CliffGenerationStep.h  OceanGenerationStep.cpp  OceanGenerationStep.h  PondGenerationStep.cpp  PondGenerationStep.h  RampGenerationStep.cpp  RampGenerationStep.h  RiverGenerationStep.cpp  RiverGenerationStep.h
src/world/generation/utils/: AutoTileUtils.h  DualGridAutotiling.h  WorldGenUtils.cpp  WorldGenUtils.h
src/world/presentation/: TownPresenter.cpp  TownPresenter.h
